--- a/Readme
+++ b/Readme
@@ -3,6 +3,12 @@
 -------------------------
 This is the project made with farmers in mind where the farmers and customers are getting satisfied by making more money of them instead of spending them on the tansportation through multiple transport agents.
 
+---------------
+|  CREATED BY |
+---------------
+  -> Jeyaprakash R (https://github.com/JeyaprakashRajesh)
+  -> Dharanish A M (https://github.com/Dharanish-AM)
+
 This is the Complete package of the project TownTolley made using MERN stack where this contains two folders named :
   ->server
   ->client
